@@ -4,6 +4,8 @@ CHANGES IN FLTK 1.1.8
 	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578,
 	  STR #1639, STR #1645, STR #1644, STR #1792, STR #1793,
 	  STR #1742, STR #1777, STR #1794)
+	- Fl_Help_View did not release the images it used (STR
+	  #1817)
 	- Shared libraries would not build on 64-bit Linux
 	  systems with an existing non-PIC FLTK installation
 	  (STR #1791)
